--- a/styles/styles.css
+++ b/styles/styles.css
@@ -375,6 +375,13 @@ footer {
     position: absolute;
     right: 0;
     top: 50px;
+    z-index: 1;
+    margin-top: -250px;
+  }
+}
+@media (max-width: 320px) {
+  .mobile-menu .fa-bars {
+    margin-top: -275px;
   }
 }
 
@@ -432,6 +439,15 @@ nav ul a:hover, nav ul a:focus {
   .home-header {
     background-position: 50%;
     height: 50vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 @media (max-width: 320px) {
